--- a/travel.html
+++ b/travel.html
@@ -9,6 +9,7 @@
 
 </head>
 <body> 
+        <div class="container">
           <div class="header">
             <div class="sidebar">
                 <div class="menu-toggle">
@@ -119,9 +120,9 @@
                               </div>
                               <div class="third-collection">
                                         <div class="place-images">
-                                            <img src="./data/Rectangle 14 (1).png" alt="Rome" class="Rome-image common-image" />
-                                            <img src="./data/Rectangle 14 (2).jpg" alt="London" class="London-image common-image" />
-                                            <img src="./data/Rectangle 14 (3).png" alt="Europe" class="common-image Europe-image" />
+                                           <div class="common-place-image"><img src="./data/Rectangle 14 (1).png" alt="Rome" class="Rome-image common-image" /></div> 
+                                           <div class="common-place-image"><img src="./data/Rectangle 14 (2).jpg" alt="London" class="London-image common-image" /></div> 
+                                           <div class="common-place-image"><img src="./data/Rectangle 14 (3).png" alt="Europe" class="common-image Europe-image" /></div> 
                                         </div>
                                         <div class="place-description">
                                             <div class="Rome common-place ">
@@ -313,8 +314,8 @@
                                     interesting offers about Cobham</p>
                             </div>
                             <div class="subscribe-email-search">
-                                <div class='email-icon'><i class="fi fi-rr-envelope"></i></div>
-                                <input type="text" id="email-input" class="search" placeholder="Your Email" />
+                                    <div class='email-icon'><i class="fi fi-rr-envelope"></i></div>
+                                    <input type="text" id="email-input" class="search" placeholder="Your Email" />
                                 <div class="subscribe-button"><button onclick="validateEmail()">Subscribe</button></div>
                             </div>
                         </div>
@@ -373,6 +374,7 @@
             </div>
         </div>
         </section>
+    </div>
         <script src="tarvel.js"></script>
 </body>
 </html>
