--- a/travel.html
+++ b/travel.html
@@ -10,6 +10,9 @@
 </head>
 <body> 
         <div class="container">
+            <div id="plane-container">
+                <img id="plane" src="./data/Group (1).png" alt="Flying Plane">
+              </div>            
           <div class="header">
             <div class="sidebar">
                 <div class="menu-toggle">
